##########################################################################
add_subdirectory(abstract)
##########################################################################

##########################################################################
add_subdirectory(global)
##########################################################################

##########################################################################
add_subdirectory(bspline)
IF(BUILD_TESTING)
   add_subdirectory(bspline/tests)
ENDIF(BUILD_TESTING)
##########################################################################

##########################################################################
add_subdirectory(utilities)
##########################################################################

##########################################################################
add_subdirectory(mapping)
IF(BUILD_TESTING)
   add_subdirectory(mapping/tests)
ENDIF()
##########################################################################
