##########################################################################
set(DEP_LIBRARIES ${PLAF_LIBRARIES})
set(DEP_LIBRARIES spl_mapping spl_bspline spl_global ${DEP_LIBRARIES})
##########################################################################

##########################################################################
# ... 
ADD_EXECUTABLE(mapping_1d_ex00 mapping_1d_ex00.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex00 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex00 COMMAND mapping_1d_ex00)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex0 mapping_1d_ex0.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex0 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex0 COMMAND mapping_1d_ex0)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex1 mapping_1d_ex1.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex1 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex1 COMMAND mapping_1d_ex1)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex2 mapping_1d_ex2.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex2 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex2 COMMAND mapping_1d_ex2)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex3 mapping_1d_ex3.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex3 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex3 COMMAND mapping_1d_ex3)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex4 mapping_1d_ex4.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex4 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex4 COMMAND mapping_1d_ex4)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex5 mapping_1d_ex5.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex5 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex5 COMMAND mapping_1d_ex5)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex6 mapping_1d_ex6.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex6 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex6 COMMAND mapping_1d_ex6)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex7 mapping_1d_ex7.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex7 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex7 COMMAND mapping_1d_ex7)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex8 mapping_1d_ex8.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex8 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex8 COMMAND mapping_1d_ex8)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex10 mapping_1d_ex10.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex10 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex10 COMMAND mapping_1d_ex10)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex11 mapping_1d_ex11.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex11 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex11 COMMAND mapping_1d_ex11)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex12 mapping_1d_ex12.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex12 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex12 COMMAND mapping_1d_ex12)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex13 mapping_1d_ex13.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex13 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex13 COMMAND mapping_1d_ex13)
# ...
# ... 
ADD_EXECUTABLE(mapping_1d_ex14 mapping_1d_ex14.F90)
TARGET_LINK_LIBRARIES(mapping_1d_ex14 ${DEP_LIBRARIES})
add_test(NAME mapping_1d_ex14 COMMAND mapping_1d_ex14)
# ...
##########################################################################

##########################################################################
# ... 
ADD_EXECUTABLE(mapping_2d_ex00 mapping_2d_ex00.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex00 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex00 COMMAND mapping_2d_ex00)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex0 mapping_2d_ex0.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex0 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex0 COMMAND mapping_2d_ex0)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex1 mapping_2d_ex1.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex1 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex1 COMMAND mapping_2d_ex1)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex2 mapping_2d_ex2.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex2 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex2 COMMAND mapping_2d_ex2)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex3 mapping_2d_ex3.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex3 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex3 COMMAND mapping_2d_ex3)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex4 mapping_2d_ex4.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex4 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex4 COMMAND mapping_2d_ex4)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex5 mapping_2d_ex5.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex5 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex5 COMMAND mapping_2d_ex5)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex6 mapping_2d_ex6.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex6 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex6 COMMAND mapping_2d_ex6)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex7 mapping_2d_ex7.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex7 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex7 COMMAND mapping_2d_ex7)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex8 mapping_2d_ex8.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex8 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex8 COMMAND mapping_2d_ex8)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex9 mapping_2d_ex9.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex9 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex9 COMMAND mapping_2d_ex9)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex10 mapping_2d_ex10.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex10 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex10 COMMAND mapping_2d_ex10)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex11 mapping_2d_ex11.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex11 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex11 COMMAND mapping_2d_ex11)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex14 mapping_2d_ex14.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex14 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex14 COMMAND mapping_2d_ex14)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex15 mapping_2d_ex15.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex15 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex15 COMMAND mapping_2d_ex15)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex16 mapping_2d_ex16.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex16 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex16 COMMAND mapping_2d_ex16)
# ...
# ... 
ADD_EXECUTABLE(mapping_2d_ex17 mapping_2d_ex17.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex17 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex17 COMMAND mapping_2d_ex17)
# ...

# ... 
ADD_EXECUTABLE(mapping_2d_ex18 mapping_2d_ex18.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex18 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex18 COMMAND mapping_2d_ex18)
# ...

# ... 
ADD_EXECUTABLE(mapping_2d_ex19 mapping_2d_ex19.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex19 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex19 COMMAND mapping_2d_ex19)
# ...

# ... 
ADD_EXECUTABLE(mapping_2d_ex20 mapping_2d_ex20.F90)
TARGET_LINK_LIBRARIES(mapping_2d_ex20 ${DEP_LIBRARIES})
add_test(NAME mapping_2d_ex20 COMMAND mapping_2d_ex20)
# ...

##########################################################################

##########################################################################
# ... 
ADD_EXECUTABLE(mapping_3d_ex00 mapping_3d_ex00.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex00 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex00 COMMAND mapping_3d_ex00)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex0 mapping_3d_ex0.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex0 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex0 COMMAND mapping_3d_ex0)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex1 mapping_3d_ex1.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex1 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex1 COMMAND mapping_3d_ex1)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex2 mapping_3d_ex2.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex2 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex2 COMMAND mapping_3d_ex2)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex3 mapping_3d_ex3.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex3 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex3 COMMAND mapping_3d_ex3)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex4 mapping_3d_ex4.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex4 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex4 COMMAND mapping_3d_ex4)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex5 mapping_3d_ex5.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex5 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex5 COMMAND mapping_3d_ex5)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex6 mapping_3d_ex6.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex6 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex6 COMMAND mapping_3d_ex6)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex7 mapping_3d_ex7.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex7 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex7 COMMAND mapping_3d_ex7)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex8 mapping_3d_ex8.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex8 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex8 COMMAND mapping_3d_ex8)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex9 mapping_3d_ex9.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex9 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex9 COMMAND mapping_3d_ex9)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex10 mapping_3d_ex10.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex10 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex10 COMMAND mapping_3d_ex10)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex11 mapping_3d_ex11.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex11 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex11 COMMAND mapping_3d_ex11)
# ...
# ... 
ADD_EXECUTABLE(mapping_3d_ex14 mapping_3d_ex14.F90)
TARGET_LINK_LIBRARIES(mapping_3d_ex14 ${DEP_LIBRARIES})
add_test(NAME mapping_3d_ex14 COMMAND mapping_3d_ex14)
# ...
##########################################################################
